More contrast for link color, resolves #53

--- a/input/assets/css/bootstrap/_variables.less
+++ b/input/assets/css/bootstrap/_variables.less
@@ -31,9 +31,9 @@
 @text-color:            @gray-dark;
 
 //** Global textual link color.
-@link-color:            @brand-primary;
+@link-color:            lighten(@brand-primary, 20%);
 //** Link hover color set via `darken()` function.
-@link-hover-color:      darken(@link-color, 15%);
+@link-hover-color:      @brand-primary;
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
